# bayesian_vecm

./: .gitignore  NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_data_utilities_walkthrough.ipynb  02_cointegration_design_walkthrough.ipynb  03_bayesian_vecm_skeleton_walkthrough.ipynb
src/bayesian_vecm/: __init__.py  _data.py  _design.py  _model.py
tests/: test_data.py  test_design.py  test_model.py  test_package.py
